<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_category_sync">

        <Preference
            app:key="pref_oldest_sync_date"
            app:title="@string/pref_oldest_date_title"
            app:summary="@string/pref_oldest_date_summary"
            app:icon="@drawable/ic_history" />

        <ListPreference
            app:key="pref_sync_direction"
            app:title="@string/pref_direction_title"
            app:entries="@array/sync_direction_entries"
            app:entryValues="@array/sync_direction_values"
            app:defaultValue="BACKWARD"
            app:icon="@drawable/ic_sync"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_state">

        <Preference
            app:key="pref_last_sync_cursor"
            app:title="@string/pref_cursor_title"
            app:selectable="false"
            app:icon="@drawable/ic_history" />

        <Preference
            app:key="pref_clear_sync_log"
            app:title="@string/pref_clear_log_title"
            app:summary="@string/pref_clear_log_summary"
            app:icon="@drawable/ic_close" />

    </PreferenceCategory>

</PreferenceScreen>
